# singchronized

./: .gitignore  DESIGN.md  README.md  run_app.py  singchronized-backend.spec
.github/workflows/: release.yml
backend/: requirements.txt  server.py
backend/app/: config.py  database.py  main.py  schemas.py  ws.py
backend/app/audio/: __init__.py  devices.py  player.py
backend/app/routers/: __init__.py  devices.py  lyrics.py  playback.py  playlists.py  songs.py  system.py
backend/app/services/: image_provider.py  library.py  lyrics.py  playlists.py
backend/app/workers/: queue.py  split.py  transcribe.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js  constants.js  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: client.js
frontend/src/components/artists/: ArtistCard.jsx  ArtistDetail.jsx  ArtistRowImage.jsx
frontend/src/components/common/: StatusBanner.jsx
frontend/src/components/home/: HomeView.jsx  SearchResults.jsx
frontend/src/components/layout/: Sidebar.jsx
frontend/src/components/lyrics/: LyricsEditorModal.jsx
frontend/src/components/player/: FullscreenLyrics.jsx  PlayerBar.jsx  QueueCountdownOverlay.jsx  SeekBar.jsx
frontend/src/components/playlists/: CreatePlaylistModal.jsx  (+2 more)
frontend/src/context/: AppContext.jsx  app-context.js
frontend/src/hooks/: useDevices.js  useKeyboardShortcuts.js  useLastPlayed.js  useLibrary.js  usePlayback.js  usePlaylists.js  useQueue.js
(+11 files in other folders)
